--- a/src/components/Task/styles.module.css
+++ b/src/components/Task/styles.module.css
@@ -3,7 +3,7 @@
   width: 100%;
 
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   padding: 1rem;
   gap: 0.75rem;
 
@@ -79,4 +79,12 @@
   border: 0;
 
   cursor: pointer;
+}
+
+.task img {
+  transition: filter 0.2s;
+}
+
+.task img:hover {
+  filter: brightness(1.3);
 }
